--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,1 +1,20 @@
-
+body{
+    
+}
+input{
+    border-radius: 5px;
+    font-size: 20;
+}
+button{
+    border-radius: 5px;
+        font-size: 15;
+        cursor: pointer;
+}
+.search-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    background-color: rgb(221, 233, 248);
+    padding: 10px;
+}
